--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-variables_full.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
