--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,12 @@ appdirs==1.4.4
 astunparse==1.6.3
 async-exit-stack==1.0.1
 async-generator==1.10
-black==21.6b0
 cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
 dnspython==2.1.0
-email-validator==1.1.3
 fastapi==0.65.2
 flatbuffers==1.12
 gast==0.4.0
@@ -31,7 +29,6 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
-matplotlib==3.4.2
 mypy-extensions==0.4.3
 numpy==1.19.5
 oauthlib==3.1.1
@@ -55,9 +52,9 @@ rsa==4.7.2
 Rx==1.6.1
 six==1.15.0
 starlette==0.14.2
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
+# tensorboard==2.5.0
+# tensorboard-data-server==0.6.1
+# tensorboard-plugin-wit==1.8.0
 tensorflow-cpu==2.5.0
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
