--- a/requirements.txt
+++ b/requirements.txt
@@ -52,9 +52,9 @@ rsa==4.7.2
 Rx==1.6.1
 six==1.15.0
 starlette==0.14.2
-# tensorboard==2.5.0
-# tensorboard-data-server==0.6.1
-# tensorboard-plugin-wit==1.8.0
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
 tensorflow-cpu==2.5.0
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
